--- a/src/main/resources/templates/admin/login.html
+++ b/src/main/resources/templates/admin/login.html
@@ -20,7 +20,7 @@
             <div th:text="${error}" style="color:#F00"></div>
         </div>
         <label for="inputEmail" class="sr-only">请输入用户名</label>
-        <input type="text" id="inputEmail" name="username"  class="form-control" placeholder="用户名" required autofocus>
+        <input type="text" id="inputEmail" name="userName"  class="form-control" placeholder="用户名" required autofocus>
 
         <label for="inputPassword" class="sr-only">密码</label>
         <input type="password" id="inputPassword"  name="password" class="form-control" placeholder="密码" required>
