--- a/src/main/resources/templates/front/index.html
+++ b/src/main/resources/templates/front/index.html
@@ -8,7 +8,7 @@
     <title>首页</title>
     <link th:href="@{/bootstrap/css/bootstrap.css}" href="../../static/bootstrap/css/bootstrap.css" rel="stylesheet"/>
     <link th:href="@{/bootstrap/css/bootstrap-theme.css}" href="../../static/bootstrap/css/bootstrap-theme.css" rel="stylesheet"/>
-    <link rel="import" href="../common/top.html">
+	<!-- <link rel="import" href="../common/top.html"> -->
 </head>
 
 <body>
